# finbert-ai-detector-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-test.yml
src/finbert_ai_detector/: __init__.py  cleaning_text.py  detector.py
tests/: __init__.py  test_detector.py
